// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can paste a valid url and add it to topic 1`] = `
<div
  class="c-taxonomy-lightbox"
>
  <div
    aria-hidden="true"
    class="c-overlay"
  />
  <div
    class="c-taxonomy-lightbox__wrapper"
  >
    <div
      class="c-taxonomy-lightbox__header"
    >
      Søk etter ressurs
      <button
        class="c-button c-button--stripped c-taxonomy-lightbox__close"
      >
        <svg
          fill="currentColor"
          preserveAspectRatio="xMidYMid meet"
          height="1em"
          width="1em"
          class="c-icon"
          viewBox="0 0 24 24"
          data-license="Apache License 2.0"
          data-source="Material Design"
          style="vertical-align: middle;"
        >
          <title>
            Cross
          </title>
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="c-taxonomy-lightbox__content"
    >
      <input
        type="text"
        data-testid="addResourceUrlInput"
        placeholder="Lim inn lenke fra ndla.no"
        value="https://beta.ndla.no/subjects/subject:3/topic:1:179373/topic:1:170165/resource:1:168388/"
      />
      <span
        class="c-errorMessage"
      >
        Obs! Denne ressursen er en annen type urn:resourcetype:tasksAndActivities
      </span>
      <div
        data-testid="articlePreview"
        class="c-article-preview"
      >
        <div
          class="c-article-preview__image"
        >
          <img
            src="/placeholder.png"
            alt=""
          />
        </div>
        <div
          class="c-article-preview__content"
        >
          <a
            href="/subject-matter/learning-resource/356/edit/undefined"
          >
            <h1
              class="c-article-preview__title"
            >
              Hva kan du om geologiske prosesser?
            </h1>
          </a>
          <p
            class="c-article-preview__description"
          />
        </div>
      </div>
      <button
        class="c-button c-button--stripped c-taxonomy-lightbox__select-button"
        data-testid="taxonomyLightboxButton"
      >
        Velg
      </button>
    </div>
  </div>
</div>
`;

exports[`Can select a resource from the list and it adds it to topic 1`] = `
<div
  class="c-taxonomy-lightbox"
>
  <div
    aria-hidden="true"
    class="c-overlay"
  />
  <div
    class="c-taxonomy-lightbox__wrapper"
  >
    <div
      class="c-taxonomy-lightbox__header"
    >
      Søk etter ressurs
      <button
        class="c-button c-button--stripped c-taxonomy-lightbox__close"
      >
        <svg
          fill="currentColor"
          preserveAspectRatio="xMidYMid meet"
          height="1em"
          width="1em"
          class="c-icon"
          viewBox="0 0 24 24"
          data-license="Apache License 2.0"
          data-source="Material Design"
          style="vertical-align: middle;"
        >
          <title>
            Cross
          </title>
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="c-taxonomy-lightbox__content"
    >
      <input
        type="text"
        data-testid="addResourceUrlInput"
        placeholder="Lim inn lenke fra ndla.no"
        value=""
      />
      <span
        class="c-taxonomy-lightbox__or"
      >
        Eller
      </span>
      <div
        class="c-dropdown"
      >
        <input
          role="combobox"
          aria-autocomplete="list"
          aria-expanded="true"
          autocomplete="off"
          placeholder="Søk på tittel"
          id="downshift-0-input"
          class="c-dropdown__single"
          value=""
        />
        <div
          class="c-dropdown__items c-dropdown__items--resourceMenu"
        >
          <div
            class="c-dropdown__item"
            id="downshift-0-item-0"
          >
            Hva kan du om geologiske prosesser?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-1"
          >
            Hva kan du om petroleumsgeologi?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-2"
          >
            Hva kan du om olje og gass på den norske sokkelen?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-3"
          >
            Hva kan du om letemetoder og datainnsamling?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-4"
          >
            Hva kan du om installasjoner for boring og vedlikehold?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-5"
          >
            Hva kan du om installasjoner for produksjon?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-6"
          >
            Sammendrag om rørhåndtering
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-7"
          >
            Hva kan du om slamsystemet?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-8"
          >
            Hva kan du om sementeringsutstyret?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-9"
          >
            Hva kan du om stigerørsystemet?
          </div>
        </div>
        <button
          class="c-button c-button--stripped c-dropdown__action"
          type="button"
          role="button"
          aria-label="close menu"
          aria-expanded="true"
          aria-haspopup="true"
          data-toggle="true"
        >
          <svg
            fill="currentColor"
            preserveAspectRatio="xMidYMid meet"
            height="1em"
            width="1em"
            class="c-icon c-icon--medium"
            viewBox="0 0 48 48"
            data-license="Apache License 2.0"
            data-source="Material Design"
            style="vertical-align: middle;"
          >
            <title>
              Search
            </title>
            <g>
              <path
                d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
              />
            </g>
          </svg>
        </button>
      </div>
      <button
        class="c-button c-button--stripped c-taxonomy-lightbox__select-button"
        data-testid="taxonomyLightboxButton"
      >
        Velg
      </button>
    </div>
  </div>
</div>
`;

exports[`Can select a resource from the list and it adds it to topic 2`] = `
<div
  class="c-taxonomy-lightbox"
>
  <div
    aria-hidden="true"
    class="c-overlay"
  />
  <div
    class="c-taxonomy-lightbox__wrapper"
  >
    <div
      class="c-taxonomy-lightbox__header"
    >
      Søk etter ressurs
      <button
        class="c-button c-button--stripped c-taxonomy-lightbox__close"
      >
        <svg
          fill="currentColor"
          preserveAspectRatio="xMidYMid meet"
          height="1em"
          width="1em"
          class="c-icon"
          viewBox="0 0 24 24"
          data-license="Apache License 2.0"
          data-source="Material Design"
          style="vertical-align: middle;"
        >
          <title>
            Cross
          </title>
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="c-taxonomy-lightbox__content"
    >
      <input
        type="text"
        data-testid="addResourceUrlInput"
        placeholder="Lim inn lenke fra ndla.no"
        value=""
      />
      <span
        class="c-taxonomy-lightbox__or"
      >
        Eller
      </span>
      <div
        class="c-dropdown"
      >
        <input
          role="combobox"
          aria-autocomplete="list"
          aria-expanded="true"
          autocomplete="off"
          placeholder="Søk på tittel"
          id="downshift-0-input"
          class="c-dropdown__single"
          value="Hva kan du om geologiske prosesser?"
        />
        <div
          class="c-dropdown__items c-dropdown__items--resourceMenu"
        >
          <div
            class="c-dropdown__item"
            id="downshift-0-item-0"
          >
            <strong>
              Hva kan du om geologiske prosesser?
            </strong>
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-1"
          >
            Hva kan du om petroleumsgeologi?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-2"
          >
            Hva kan du om olje og gass på den norske sokkelen?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-3"
          >
            Hva kan du om letemetoder og datainnsamling?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-4"
          >
            Hva kan du om installasjoner for boring og vedlikehold?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-5"
          >
            Hva kan du om installasjoner for produksjon?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-6"
          >
            Sammendrag om rørhåndtering
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-7"
          >
            Hva kan du om slamsystemet?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-8"
          >
            Hva kan du om sementeringsutstyret?
          </div>
          <div
            class="c-dropdown__item"
            id="downshift-0-item-9"
          >
            Hva kan du om stigerørsystemet?
          </div>
        </div>
        <button
          class="c-button c-button--stripped c-dropdown__action"
          type="button"
          role="button"
          aria-label="close menu"
          aria-expanded="true"
          aria-haspopup="true"
          data-toggle="true"
        >
          <svg
            fill="currentColor"
            preserveAspectRatio="xMidYMid meet"
            height="1em"
            width="1em"
            class="c-icon c-icon--medium"
            viewBox="0 0 24 24"
            data-license="Apache License 2.0"
            data-source="Material Design"
            style="vertical-align: middle;"
          >
            <title>
              Cross
            </title>
            <g>
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </g>
          </svg>
        </button>
      </div>
      <div
        data-testid="articlePreview"
        class="c-article-preview"
      >
        <div
          class="c-article-preview__image"
        >
          <img
            src="/placeholder.png"
            alt=""
          />
        </div>
        <div
          class="c-article-preview__content"
        >
          <a
            href="/subject-matter/learning-resource/356/edit/undefined"
          >
            <h1
              class="c-article-preview__title"
            >
              Hva kan du om geologiske prosesser?
            </h1>
          </a>
          <p
            class="c-article-preview__description"
          />
        </div>
      </div>
      <button
        class="c-button c-button--stripped c-taxonomy-lightbox__select-button"
        data-testid="taxonomyLightboxButton"
      >
        Velg
      </button>
    </div>
  </div>
</div>
`;
